# libfxsys

./: CMakeLists.txt  README  SConstruct
disp/: SConscript  allclr.S  areaclr.S  areareverse.S  clearline.S  drawline.S  getdisp.S  getpoint.S  popupwin.S  putdisp.S  putdisparea.S  readarea.S  restoredisp.S  savedisp.S  setpoint.S  writegraph.S
file/: closefile.c  closefile_os.S  createdirectory.c  createentry_os.S  createfile.c  getfilesize.c  getfilesize_os.S  openfile.c  openfile_os.S  readfile_os.S  writefile.c  writefile_os.S
include/: app.h  asm.h  ctype.h  disp.h  file.h  iso646.h  jumptable.h  key.h  keycodes.h  limits.h  official.h  print.h  rtc.h  stddef.h  stdint.h  stdlib.h  string.h
include/official/: file.h  key.h
key/: SConscript  get_repeattime.S  getkey.S  getkeywait.S  set_repeattime.S  set_repeattime_default.S
print/: locate_os.S  print.S  printc.S  printline.S  printmini.c  printminisd.S  printrev.S  printrevc.S  printrline.S  printxy.S
src/: SConscript
src/app/: SConscript  appdyna.S  appeact.S  appequa.S  appequation.S  appfinance.S  appgraphtable.S  applink.S  appmemory.S  appprog.S  appprogram.S  apprecur.S  apprunmat.S  apprunstat.S  appsystem.S
src/ctype/: SConscript  ctype_.c
src/disp/: allclr.S  areaclr.S  setpoint.S  writegraph.S
src/file/: SConscript  createfile.c  getfilesize.c  getfilesize_os.S  openfile.c  readfile.c  readfile_os.S  writefile_os.S
src/official/: SConscript
src/official/disp/: SConscript  popupwin.S  restoredisp.S
src/official/file/: closefile.c  closefile_os.S  openfile_os.S  readfile.c  writefile.c
src/official/key/: getkey.S  getkeywait.S  set_repeattime_default.S
src/official/print/: SConscript  locate.c  locate_os.S  printc.S  printmini.c  printrev.S  printrevc.S  printrline.S  printxy.S
src/print/: locate.c  print.S  printmini.c
src/rtc/: SConscript  rtcgetticks.S  rtcgettime.S  rtcreset.S  rtcsetdatetime.S
src/stdlib/: SConscript  abs.c  atoi.c  calloc.S  div.c  free.S  labs.c  ldiv.c  malloc.S  realloc.S  syscall.S
src/string/: SConscript  memcmp.S  memcpy.S  memmove.S  memset.S  strcat.S  strcmp.S  strlen.S  strncat.S  strncmp.S
